docs/k8s/datafusion-common.yml
apiVersion: v1
kind: Namespace
metadata:
  name: datafusion
  labels:
    app.kubernetes.io/name: datafusion
